# ds4-rs-metal

./: .gitignore  Cargo.toml  NOTICE  README.md  USAGE.md
bench/: run_bench.sh
benchmarks/ds4_msl/bridge_shims/: ds4_moe_grid_args.metal  dsv4_argmax_f32.metal  dsv4_attn_out_low_q8_0_f32_K.metal  (+23 more)
crates/ds4_engine/: Cargo.toml  build.rs
crates/ds4_engine/src/: attn_dispatch.rs  batched_branching.rs  bench.rs  decode_step.rs  dispatch.rs  forward.rs  gguf.rs  kernel_registry.rs  kv_cache.rs  layer_view.rs  lib.rs  moe.rs  mtp.rs  op_timer.rs  prefill_ffi.rs  tokenizer.rs
crates/ds4_engine/tests/: m4_attn_decode.rs  m4_attn_prefix_batched_smoke.rs  m4_composed_decode.rs  m4_decode.rs  m4_decode_to_residual_identity.rs  m4_fixture_replay.rs  m4_shared_chain_helper_wired.rs  mtp_loader_smoke.rs  tokenizer_gguf.rs  zz_layer_taxonomy_dump.rs
crates/ds4_engine/tests/fixtures/antirez/: m4_short_pos42_hc_slots.json  m4_short_pos42_hc_slots.txt
crates/ds4_metal/: ATTENTION_COMPOSER_BLUEPRINT.md  Cargo.toml  PROVENANCE.md  build.rs
crates/ds4_metal/examples/: buffer_alignment.rs  realistic_fusion.rs  submit_overhead.rs
crates/ds4_metal/patches/: README.md  kernel_mul_mm_id_iq2_xxs_pair_swiglu_f32.metal
crates/ds4_metal/src/: base_run_bundle.rs  compressor.rs  cpu_via_dequant.rs  decode_runner.rs  deferred.rs  f16_cast.rs  iq2_xxs_tables.rs  lib.rs  macos.rs  mtp_bundle.rs  quantized_experts.rs  sampling.rs  single_buffer_encoder.rs  spec_decode.rs
crates/ds4_metal/tests/: attn_half_then_kv_fp8_smoke.rs  attn_output_proj_batched_smoke.rs  attn_output_proj_scope_smoke.rs  attn_prefix_batched_smoke.rs  attn_qkv_chain_batched_smoke.rs  attn_smoke.rs  batchscope_checkpoint_smoke.rs  batchscope_commit_keep_open_smoke.rs  chunk_first_divergence.rs  chunk_pertoken_heads_diff.rs  chunk_prefill_equiv.rs  chunk_resid_probe.rs  chunk_state_ab.rs  chunk_vs_pertoken_state.rs  coherence_onset.rs  comp_prefill_finite_smoke.rs  comp_prefill_integration.rs  comp_prefill_kernel_smoke.rs  compressor_decode_one_metal_smoke.rs  compressor_pool_ratio4_smoke.rs  compressor_store_one_smoke.rs  decode_runner_embed_bench.rs  decode_token_unified_bench.rs  dump_layer_quants.rs  encode_attn_chain_k_bench.rs  encode_attn_output_matmuls_smoke.rs  encode_ffn_chain_k_e2e_bench.rs  encode_ffn_components_k_bench.rs  encode_first_half_attn_fusion_smoke.rs  encode_first_half_gguf_smoke.rs  encode_first_half_smoke.rs  encode_layer_attn_half_cpu_smoke.rs  encode_layer_attn_half_prod_dims_smoke.rs  encode_moe_and_shared_chain_smoke.rs  encode_moe_chain_fused_K_q4_K_smoke.rs  encode_moe_chain_mm_real_bench.rs  encode_moe_chain_mm_smoke.rs  encode_mtp_draft_real_bench.rs  encode_router_finalize_smoke.rs  encode_router_logits_smoke.rs  (+60 more)
crates/ds4_metal/tests/guardrails/: mod.rs
crates/ds4_server/: Cargo.toml
crates/ds4_server/src/: anthropic.rs  backend.rs  gen.rs  http.rs  main.rs  openai.rs  responses.rs  tools_dsml.rs
docs/: ds4-rs-metal-apple-silicon-en.md  ds4-rs-metal-apple-silicon-zh.md
(+66 files in other folders)
